# ChangeLog for net-misc/youtube-dl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.332 2014/04/19 14:39:45 jer Exp $

  19 Apr 2014; Jeroen Roovers <jer@gentoo.org> youtube-dl-2014.04.13.ebuild:
  Stable for HPPA (bug #508012).

*youtube-dl-2014.04.19 (19 Apr 2014)

  19 Apr 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.04.19.ebuild:
  Version bump.

*youtube-dl-2014.04.13 (13 Apr 2014)

  13 Apr 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.03.21.5.ebuild,
  -youtube-dl-2014.03.24.1.ebuild, -youtube-dl-2014.03.25.1.ebuild,
  -youtube-dl-2014.03.27.1.ebuild, -youtube-dl-2014.03.29.ebuild,
  -youtube-dl-2014.03.30.1.ebuild, +youtube-dl-2014.04.13.ebuild:
  Version bump.

*youtube-dl-2014.04.11.2 (11 Apr 2014)

  11 Apr 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.04.11.2.ebuild:
  Version bump.

*youtube-dl-2014.04.07.1 (07 Apr 2014)

  07 Apr 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.04.07.1.ebuild:
  Version bump.

*youtube-dl-2014.04.03.2 (03 Apr 2014)

  03 Apr 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.04.03.2.ebuild:
  Version bump.

*youtube-dl-2014.04.01.3 (01 Apr 2014)

  01 Apr 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.04.01.3.ebuild:
  Version bump.

*youtube-dl-2014.03.30.1 (31 Mar 2014)

  31 Mar 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.03.30.1.ebuild:
  Version bump.

*youtube-dl-2014.03.29 (29 Mar 2014)

  29 Mar 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.03.29.ebuild:
  Version bump.

*youtube-dl-2014.03.27.1 (28 Mar 2014)

  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.03.27.1.ebuild:
  Version bump.

*youtube-dl-2014.03.25.1 (25 Mar 2014)

  25 Mar 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.03.25.1.ebuild:
  Version bump.

*youtube-dl-2014.03.24.1 (24 Mar 2014)

  24 Mar 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.03.10.ebuild,