@@ -8,6 +8,7 @@ DIST youtube-dl-2014.04.07.1.tar.gz 777558 SHA256 ac5b505b974e036c9265c700d6bb37
 DIST youtube-dl-2014.04.11.2.tar.gz 781909 SHA256 b5ac770f8ecff6add8acd6b6f552462df2bc82b86c33ba7138156b49f338a7f2 SHA512 1b3e2c97731c9a703f9051c15a73ae1ce980fd73e4967c330e39b37bcf3bb7086b1c7e9be70978c120433551768b4ba1c968d5ec4e399014e19264532df8d447 WHIRLPOOL f04f5a2e7a45bc25e1c4534d613a7139ba1b928f07373baeb4ac810fbafd171c4fdb14f55a31b53bade88958e315ef5d024ebcbc03f8c1f4fbee420fc4ee60d5
 DIST youtube-dl-2014.04.13.tar.gz 785764 SHA256 582ddfb0c4f008c7e9a9d2f9f8752851bdb47c119c51f3b77500ad3dadf560e1 SHA512 8f2acc2402254d720d6020d364f400aee66e77d8eb99ad3c5b8dbab4b118366bc1f2d4c32e1ccf5ca5a3eada3592e1a3b83b66fe3ded5ee956c5945d64df828f WHIRLPOOL 09280635d5c766acb60ce8102198bd66acae1cd2d120edaceb9c27dbd423f458436dd211be72a92794c619032715adc0bae2d5087da6b2f91ce9b5a5099d4b16
 DIST youtube-dl-2014.04.19.tar.gz 790720 SHA256 83051e796758b023b53de3c5bff61fa78c9a6e17ea1ca22d9b6777d9de3c2553 SHA512 2fec091f848ba52816fc7532c290087e1eefac90bfab275f18e72d452b2775b00cc204b14be1809da0e6bd703225daeeec25f553d2dfcd1bcfc1d8fb9db64db4 WHIRLPOOL ebc26b0587bb41187316421e8cec90f0d426eb27d5766bc59d9139ac59a441a0d9bc5c76170bc0ef914676ecd919a32dd7edb5380e834ab9c12245df4ecd00db
+DIST youtube-dl-2014.04.21.6.tar.gz 796348 SHA256 8df2a8300a6e333a637f655181216097839992b384f2eafa93f1ee9cfd2f1e1a SHA512 b79b4ea6e0106c12e09af3124911fa34521b94579e4c437205629c36bd1172bf9c176fcf1f2ee8173a035bfda0e8b3aefdb744a9ca23a7a1c5656aea08409a69 WHIRLPOOL b87b2e9ba71bcf21c2ecaad19d0dc1cb8e3e826a56a9277cebc599408591b65e28fc7831fa456929e2f4db57f255167fb4739cb0038b09f9b45f6d7c71a0950d
 EBUILD youtube-dl-2014.02.10.ebuild 1532 SHA256 19431ff1e4b76f6aeb79ef3ace9bc76ce1d610f2761f31eb6139479cbd9a8813 SHA512 518a5302d90b8181755777b626ee73d5fd3a0de580c0e8e57a5fc3e4bf133ac6b05c7dcaa6633df039bacbef43885aa648d1eab25c992fb885d1305dacd6a606 WHIRLPOOL b028ad7671bcbe1d3ae43662f03f58776c256f8f48b6935ce066da5e60b222f794a6422996cd7ca2ccd1b20c94391fecb8a93a5a9ad317e2801d7ac8c93dbde7
 EBUILD youtube-dl-2014.04.01.3.ebuild 1561 SHA256 0b84361f867d5f56b5995e327f85ec24e29880820be213e94d6f8f12bc235d9e SHA512 6f1b2d428e6645421f66cdbe5dd52383ef8914c9b46ff03e7953498a930a1f88924124657853541bbfbe3922dbc2729d26310f125500db50e9fe5023378afc56 WHIRLPOOL 4a0552f1421c89d667a11321475829250bc0b5dce3c7b030a20c5cfe7d30cb5ae87bf564958f6fe81b02d7bda3a7ca42bc7295772dd6c0ad8391c88c945981e4
 EBUILD youtube-dl-2014.04.03.2.ebuild 1561 SHA256 752ff3a1ba1fcdf433b5b972da7f4e29b37c6a7c064bc6a10e52be00da80c6ef SHA512 048672cbd3ef11e889e74bda254f0fdde92f4a4075615abfa4773d49d769c4c2b72a105b8f1d18a89ddf2d41aec9b3ae6d43cbb807dc84b5f38cd0b850209df2 WHIRLPOOL 19a14d98ca1516b342ee6c060e2f6f5396d9d8622e70c04e627740716019fedbd542c76dfd7af3990a53fddccb85c653ffdfc361c2aaf374d121a98d9cfa5407
@@ -15,12 +16,13 @@ EBUILD youtube-dl-2014.04.07.1.ebuild 1561 SHA256 c4db6dda3712b699a75af199d16b8e
 EBUILD youtube-dl-2014.04.11.2.ebuild 1561 SHA256 181c97a15ba89e563a2b9ed62b6c9af7c1b42be65ad92584f7756be42a2de74e SHA512 f3b2ea8a64cdd60719269ff4c0e2073bfa9a7068326c2ecb6946fb619dbd66045dbc6ef26824223378d52aab46ff9289fdee920f3c78872b0b7da5f48a4d055a WHIRLPOOL 4a5c282425c11bcd420e7ba1e8b8d037bb689549671684b6e7bfee6b108a20a47c68cca9fb9c8c146fa0cc108e8760463ac089f1e2727b8a0d3a6594ddb112bc
 EBUILD youtube-dl-2014.04.13.ebuild 1558 SHA256 1f93ead304ca2f856b767d2352a74ae2a9872783be2f3dde1a13be2068aed3e1 SHA512 c15e7f6aa486be916897dffc45786faab14216bbf51da70d97fff4df9e2a6e701d56a93c133f07b16b8dc0d4f39a9049d14632fd8b651d9e0323beab25359a92 WHIRLPOOL ffa6b4dd6835479a35393d021015acb1763b028b0a50a0cceeb0ffc6204d23f508411b57580e81039a5fa4fb74cf27f07af2bd297cd2db6a45751d8d5741c2d9
 EBUILD youtube-dl-2014.04.19.ebuild 1559 SHA256 c5e715fbe713895439743c7cb66e003bf5b3a4dac8f823a2780b300e9ea5cd1b SHA512 cfffc66be3e9af9a396437cc652c680a25b58ad14014505207db8cd00b53a76dd8455e731fae55417cce07e81b0b9cf7a965a05d56833c7deed83e0eba397bb3 WHIRLPOOL 7bd3fee7b5c399004e46ba3e35078a976555a66102fda24f25209ae30164cce60edc97c1bccebf56d31367fa6bc9276b38e3ca19b0b71bd028af76d9832b5a0a
-MISC ChangeLog 49229 SHA256 4d478430efe5b890bc0e178282e8c2cdcc5d01e691411bd12010fec6cbd0123c SHA512 f90e40390edfc749b578753d72105ed004b30a9239dcc6b811690a0fc533648fd9d965e3294897e6173eac21b7c0f89798670546f576e31efc8dfb066483fcf2 WHIRLPOOL e76087edc487a52c1b1572c74c3b8dea56fba040d14834a6e40a2cfeff451f4c9fcad4a92750d2e42afefcd6c54578de926106b2cb27fb9a92c4b1be47e5d28a
+EBUILD youtube-dl-2014.04.21.6.ebuild 1561 SHA256 fda471d3a63d1bcb6097f9c9af54b554c8e6f4e4f451c7253106021dd25a5262 SHA512 eb28e287add21d2c3bd5e55633eb6d757aad94c36389990a8976c6011f81d184b7326c254d73d484ac16e3ee6513ebdb2b44798b89aa9a8a80c66ea5e311fac6 WHIRLPOOL efdeb6be96c41ea9d4780bc4fecf035cf34f36cf69f94429bf3ad59e95d1d717ecc60e2976bcd8146cd786be15593c2dd1d10ac86ac33c61923fa06c704fee41
+MISC ChangeLog 49366 SHA256 f9e013e663d799334f360a6d81fd0e6cba760d0375611b2e44accb4d9de0fc8b SHA512 f62d49d3a7ac5dfee28d91c1ad30fe48d3a4925af6042909f79bb3cff2d40537646534fdde4dd3af955b81b12314c6719eda86b190ab754f0dabb9397740289e WHIRLPOOL 6c9012a1f1444f2eec45bb2728b3fba315970ab02b2c961210f4b64fc1d1e4ad195c8a15e60a64a170f5dff6a6f0021ea5c27b6a22cd080aeef511c198674f44
 MISC metadata.xml 274 SHA256 2b4f14b46d21b004377e745db520f7961bc4163b23e6f3d8bbcab508272b1f69 SHA512 acfb3695928ebf2ee87c75f06c7ab47a65f4aa8564b1426ee523a1a5c853ed56df0de4cba186ac003383a27dfa9d21e4f4ff44b48e152c406a918f1b01ca358b WHIRLPOOL 0f245af71a769b0d4eb9bb57a99599a0875ad0373a830ff9e8215a077d3d2f02e916b7b25d275b19b5139810608abddfada68d3d0f2e9191351d26ba716b623b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNSirIACgkQVWmRsqeSphMD5gCfS3U2CRSPTDvdMhj4RzhFSlqM
-xEMAnAwFsB6b1ewi+Q5DwJbAFfX3OB/0
-=uW53
+iEYEAREIAAYFAlNWic0ACgkQVWmRsqeSphN/XQCfffIll5oklR/qvbXfmgWQjrKZ
+lk8AnRWYzKizl48oJVW2xfPCPQbUudU4
+=mupM
 -----END PGP SIGNATURE-----
