@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.332 2014/04/19 14:39:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.333 2014/04/22 15:24:59 jer Exp $
+
+*youtube-dl-2014.04.21.6 (22 Apr 2014)
+
+  22 Apr 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.04.21.6.ebuild:
+  Version bump.
 
   19 Apr 2014; Jeroen Roovers <jer@gentoo.org> youtube-dl-2014.04.13.ebuild:
   Stable for HPPA (bug #508012).
